Fixed SEO Visibility

--- a/src/App.css
+++ b/src/App.css
@@ -1708,7 +1708,7 @@ margin-right:1rem;
   }
 }
 
-
+/* Confirm ticket */
 .ticket-container {
   display: flex;
   flex-direction: column;
@@ -1733,6 +1733,12 @@ margin-right:1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.ticket-sub-header{
+  display:flex;
+  flex-wrap: wrap;
+  align-items:center;
+  justify-content: space-between;
 }
 
 .ticket-title {
@@ -1761,13 +1767,11 @@ margin-right:1rem;
 
 .journey-section {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   flex-wrap: wrap;
 }
 
-.journey-left, .journey-right {
-  width: 48%;
-}
+
 
 .passenger-section, .fare-section, .contact-info {
   margin-top: 10px;
@@ -1820,12 +1824,15 @@ margin-right:1rem;
 .download-btn:hover {
   background-color: #b91c22;
 }
+.booking-at{
+  font-size: 1rem;
+
+  color: #777;
+}
 
 /* Responsive */
 @media (max-width: 600px) {
-  .journey-left, .journey-right {
-    width: 100%;
-  }
+  
   .contact-qr-section {
     flex-direction: column;
     align-items: center;
@@ -1833,6 +1840,9 @@ margin-right:1rem;
   }
   .qr-section {
     margin-top: 15px;
+  }
+  .booked-at{
+    font-size: 0.9rem;
   }
 }
 
